tests/ui/async-await/in-trait/fn-not-async-err.stderr
error[E0277]: `i32` is not a future
  --> $DIR/fn-not-async-err.rs:10:22
   |
LL |     fn foo(&self) -> i32 {
   |                      ^^^ `i32` is not a future
   |
   = help: the trait `Future` is not implemented for `i32`
   = note: i32 must be a future or must implement `IntoFuture` to be awaited
note: required by a bound in `MyTrait::{opaque#0}`
  --> $DIR/fn-not-async-err.rs:6:5
   |
LL |     async fn foo(&self) -> i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MyTrait::{opaque#0}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
